// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input input can not work on type as disabled or readonly 1`] = `
<div>
  <div class="fect-input" style="--heightRatio: 1.313;">
    <!---->
    <div class="fect-input__container">
      <!---->
      <div class="fect-input__wrapper  disabled">
        <!----><input type="text" class="disabled" style="font-size: 12px;" disabled="" placeholder="最小的">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div class="fect-input" style="--heightRatio: 1.313;">
    <!---->
    <div class="fect-input__container">
      <!---->
      <div class="fect-input__wrapper  ">
        <!----><input type="text" class="" style="font-size: 12px;" readonly="" placeholder="最小的">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Input should be render as a element 1`] = `
<div class="fect-input" style="--heightRatio: 1.687;">
  <!---->
  <div class="fect-input__container">
    <!---->
    <div class="fect-input__wrapper  ">
      <!----><input type="text" class="" style="font-size: 14px;">
      <!---->
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input should be support different sizes 1`] = `
<div>
  <div class="fect-input" style="--heightRatio: 1.313;">
    <!---->
    <div class="fect-input__container">
      <!---->
      <div class="fect-input__wrapper  ">
        <!----><input type="text" class="" style="font-size: 12px;" placeholder="最小的">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div class="fect-input" style="--heightRatio: 1.5;">
    <!---->
    <div class="fect-input__container">
      <!---->
      <div class="fect-input__wrapper  ">
        <!----><input type="text" class="" style="font-size: 12px;" placeholder="较小的">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div class="fect-input" style="--heightRatio: 1.687;">
    <!---->
    <div class="fect-input__container">
      <!---->
      <div class="fect-input__wrapper  ">
        <!----><input type="text" class="" style="font-size: 14px;" placeholder="中等的">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div class="fect-input" style="--heightRatio: 1.875;">
    <!---->
    <div class="fect-input__container">
      <!---->
      <div class="fect-input__wrapper  ">
        <!----><input type="text" class="" style="font-size: 16px;" placeholder="较大的">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Input should be support icon 1`] = `
<div class="container">
  <div class="fect-input" style="--heightRatio: 1.687;"><label> gayhub </label>
    <div class="fect-input__container">
      <!---->
      <div class="fect-input__wrapper  ">
        <div class="fect-input__icon"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" shape-rendering="geometricPrecision" viewBox="0 0 24 24" height="24" width="24" style="color: currentColor;">
            <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22"></path>
          </svg></div><input type="text" class="" style="font-size: 14px;">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Input should be work with label 1`] = `
<div>
  <div class="fect-input" style="--heightRatio: 1.313;"><label><span>Test</span></label>
    <div class="fect-input__container">
      <!---->
      <div class="fect-input__wrapper  ">
        <!----><input type="text" class="" style="font-size: 12px;" placeholder="最小的">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Input should support clearable and password icon 1`] = `
<div class="fect-input" style="--heightRatio: 1.687;">
  <!---->
  <div class="fect-input__container">
    <!---->
    <div class="fect-input__wrapper  ">
      <!----><input type="password" class="" style="font-size: 14px;">
      <div class="fect-input__clear-icon "><svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision">
          <path d="M18 6L6 18"></path>
          <path d="M6 6l12 12"></path>
        </svg></div>
      <div class="fect-input__icon" style="cursor: pointer; pointer-events: auto;"><svg viewBox="0 0 24 24" width="16" height="16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision" style="color: currentColor;">
          <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
          <circle cx="12" cy="12" r="3"></circle>
        </svg></div>
    </div>
    <!---->
  </div>
</div>
`;
